--- a/index.html
+++ b/index.html
@@ -20,28 +20,31 @@
     device-orientation-permission-ui="enabled: false">
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;"
       raycaster="far: 1.2.0; objects: .clickable"></a-camera>
-    <a-entity id="first-target" mindar-image-target="targetIndex: 0">
-    </a-entity>
-    <a-entity id="second-target" mindar-image-target="targetIndex: 1">
+    <a-entity id="first-target" mindar-image-target="targetIndex: 0"> 
+    </a-entity>  
+
+
+    <a-entity id="second-target" mindar-image-target="targetIndex: 4">
     </a-entity>
 
-     <a-entity id="second-target" mindar-image-target="targetIndex: 7">
+     <a-entity id="ten-target" mindar-image-target="targetIndex: 10">
     </a-entity>
   </a-scene> 
  
-  <div class="video is_hidden">
+      <div class="video">
   <video
     id="my-video"
     class="video-js"
     controls
     preload="auto"
-    width="640"
-    height="264"
+    width="600"
+    height="400"
     data-setup="{}"
+    autoplay
   >
     <source src="./videos/Kyiv_deoccupation.mp4" type="video/mp4" />
   </video>
-</div> 
+</div>
   <script src="https://vjs.zencdn.net/8.0.4/video.min.js"></script>
 </body>
 
